saving android tests

--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,18 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="95b596">  <td>15/09/17 12:33:49</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;CountryNotSupportedTest.beforeTest(org.testng.ITestContext)[pri:0, instance:Scripts.android.CountryNotSupportedTest@58695725]">&gt;&gt;beforeTest</td> 
+<tr bgcolor="95b596">  <td>15/09/18 15:28:42</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;CountryPartiallySupported.beforeTest(org.testng.ITestContext)[pri:0, instance:Scripts.android.CountryPartiallySupported@58695725]">&gt;&gt;beforeTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@762384154</td>   <td></td> </tr>
-<tr bgcolor="95b596">  <td>15/09/17 12:33:49</td>   <td>39</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CountryNotSupportedTest.test1_20_1()[pri:0, instance:Scripts.android.CountryNotSupportedTest@58695725]">test1_20_1</td> 
+<tr bgcolor="95b596">  <td>15/09/18 15:28:45</td>   <td>2256</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CountryPartiallySupported.test1_10_1()[pri:0, instance:Scripts.android.CountryPartiallySupported@58695725]">test1_10_1</td> 
   <td>main@762384154</td>   <td></td> </tr>
-<tr bgcolor="95b596">  <td>15/09/17 12:33:49</td>   <td>41</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CountryNotSupportedTest.test1_22_1()[pri:0, instance:Scripts.android.CountryNotSupportedTest@58695725]">test1_22_1</td> 
+<tr bgcolor="95b596">  <td>15/09/18 15:28:45</td>   <td>2257</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CountryPartiallySupported.test1_11_1()[pri:0, instance:Scripts.android.CountryPartiallySupported@58695725]">test1_11_1</td> 
   <td>main@762384154</td>   <td></td> </tr>
-<tr bgcolor="95b596">  <td>15/09/17 12:33:49</td>   <td>42</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CountryNotSupportedTest.test1_3_2()[pri:0, instance:Scripts.android.CountryNotSupportedTest@58695725]">test1_3_2</td> 
+<tr bgcolor="95b596">  <td>15/09/18 15:28:45</td>   <td>2259</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CountryPartiallySupported.test1_12_1()[pri:0, instance:Scripts.android.CountryPartiallySupported@58695725]">test1_12_1</td> 
   <td>main@762384154</td>   <td></td> </tr>
-<tr bgcolor="95b596">  <td>15/09/17 12:33:49</td>   <td>44</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CountryNotSupportedTest.test1_4_2()[pri:0, instance:Scripts.android.CountryNotSupportedTest@58695725]">test1_4_2</td> 
+<tr bgcolor="95b596">  <td>15/09/18 15:28:45</td>   <td>2261</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CountryPartiallySupported.test1_13_1()[pri:0, instance:Scripts.android.CountryPartiallySupported@58695725]">test1_13_1</td> 
   <td>main@762384154</td>   <td></td> </tr>
-<tr bgcolor="95b596">  <td>15/09/17 12:33:49</td>   <td>45</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CountryNotSupportedTest.test1_5_2()[pri:0, instance:Scripts.android.CountryNotSupportedTest@58695725]">test1_5_2</td> 
+<tr bgcolor="95b596">  <td>15/09/18 15:28:45</td>   <td>2252</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CountryPartiallySupported.test1_8_6()[pri:0, instance:Scripts.android.CountryPartiallySupported@58695725]">test1_8_6</td> 
   <td>main@762384154</td>   <td></td> </tr>
-<tr bgcolor="95b596">  <td>15/09/17 12:33:49</td>   <td>38</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CountryNotSupportedTest.test1_8_4()[pri:0, instance:Scripts.android.CountryNotSupportedTest@58695725]">test1_8_4</td> 
+<tr bgcolor="95b596">  <td>15/09/18 15:28:45</td>   <td>2254</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CountryPartiallySupported.test1_9a_2()[pri:0, instance:Scripts.android.CountryPartiallySupported@58695725]">test1_9a_2</td> 
   <td>main@762384154</td>   <td></td> </tr>
 </table>
