--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,34 +4,34 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>Scripts.android.CountryNotSupportedTest</td>
+<td>Scripts.android.CountryPartiallySupported</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>test1_20_1</td>
+<td>test1_10_1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test1_3_2</td>
+<td>test1_11_1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test1_4_2</td>
+<td>test1_12_1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test1_22_1</td>
+<td>test1_13_1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test1_8_4</td>
+<td>test1_8_6</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test1_5_2</td>
+<td>test1_9a_2</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
