--- a/test-output/old/SignInSmokeTest/toc.html
+++ b/test-output/old/SignInSmokeTest/toc.html
@@ -8,9 +8,9 @@
 <h3><p align="center">Results for<br/><em>SignInSmokeTest</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
-<td>1 test</td>
-<td><a target='mainFrame' href='classes.html'>1 class</a></td>
-<td>6 methods:<br/>
+<td>4 tests</td>
+<td><a target='mainFrame' href='classes.html'>4 classes</a></td>
+<td>22 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (0)</a></td>
@@ -20,10 +20,34 @@
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
-<table width='100%' class='test-skipped'>
+<table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Sign in Smoke Test (0/0/6)</td><td valign='top' align='right'>
-  <a href='Sign in Smoke Test.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>Country Not Supported Test Test (3/0/0)</td><td valign='top' align='right'>
+  <a href='Country Not Supported Test Test.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Country Partially Supported Test (6/0/0)</td><td valign='top' align='right'>
+  <a href='Country Partially Supported Test.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Country Supported Test Test (6/0/0)</td><td valign='top' align='right'>
+  <a href='Country Supported Test Test.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Login Test (7/0/0)</td><td valign='top' align='right'>
+  <a href='Login Test.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
